# bladelist

./: pyproject.toml
bladebotlist/: settings.py
main_site/: views.py
main_site/management/commands/: runbot.py
templates/layouts/: server_base.html
