[tool.poetry]
name = "bladebotlist-py"
version = "0.1.0"
description = ""
authors = ["ryuga <vaishnav2353@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.27"
djangorestframework = "^3.16.1"
gunicorn = "^20.1.0"
python-decouple = "^3.8"
django-filter = "^22.1"
django-hosts = "^5.2"
Markdown = "^3.10"
psycopg2-binary = "^2.9.11"
requests = "^2.28.0"
dj-database-url = "^2.3.0"
"discord.py" = "^2.3.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
